# IconvHelper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: IconvHelper.hpp  version.h.in
src/: IconvHelper.cpp  gbk_str.cpp  main.cpp  test.cpp
